<?xml version="1.0"?>
<package format="2">
  <name>track</name>
  <version>0.0.0</version>
  <description>The track package</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>autolabor_description</depend>
</package>
