<?xml version="1.0"?>
<package format="2">
  <name>track</name>
  <version>0.0.0</version>
  <description>The track package</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>autolabor_description</depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>image_view</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_view</exec_depend>
</package>
